# docs/swagger.json
@@ -3257,6 +3257,13 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "description": "Message ID",
+                        "name": "messageId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "Delete request",
                         "name": "request",
                         "in": "body",
@@ -3409,6 +3416,13 @@
                         "type": "string",
                         "description": "Session ID",
                         "name": "sessionId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Message ID",
+                        "name": "messageId",
                         "in": "path",
                         "required": true
                     },
@@ -4135,6 +4149,55 @@
                 }
             }
         },
+        "/session/{sessionId}/newsletter/list": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get a list of all subscribed newsletters for a session",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Newsletters"
+                ],
+                "summary": "List newsletters",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Session ID",
+                        "name": "sessionId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Newsletters retrieved successfully",
+                        "schema": {
+                            "$ref": "#/definitions/dto.NewsletterListResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.NewsletterListResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.NewsletterListResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/session/{sessionId}/newsletter/upload": {
             "post": {
                 "security": [
@@ -4144,7 +4207,7 @@
                 ],
                 "description": "Upload media files (image, video, audio, document) for use in newsletter messages. Returns MediaHandle required for sending media messages.",
                 "consumes": [
-                    "multipart/form-data"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -4162,18 +4225,13 @@
                         "required": true
                     },
                     {
-                        "type": "file",
-                        "description": "Media file to upload",
-                        "name": "file",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Media type (image, video, audio, document)",
-                        "name": "media_type",
-                        "in": "formData",
-                        "required": true
+                        "description": "Upload media request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UploadNewsletterMediaRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -4456,55 +4514,6 @@
                         "description": "Internal server error",
                         "schema": {
                             "$ref": "#/definitions/dto.StandardResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/session/{sessionId}/newsletters": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Get a list of all subscribed newsletters for a session",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Newsletters"
-                ],
-                "summary": "List newsletters",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Session ID",
-                        "name": "sessionId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Newsletters retrieved successfully",
-                        "schema": {
-                            "$ref": "#/definitions/dto.NewsletterListResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request",
-                        "schema": {
-                            "$ref": "#/definitions/dto.NewsletterListResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/dto.NewsletterListResponse"
                         }
                     }
                 }
@@ -8430,6 +8439,27 @@
                 "session_id": {
                     "type": "string",
                     "example": "default"
+                }
+            }
+        },
+        "dto.UploadNewsletterMediaRequest": {
+            "type": "object",
+            "required": [
+                "data",
+                "media_type"
+            ],
+            "properties": {
+                "data": {
+                    "description": "Base64 encoded media",
+                    "type": "string"
+                },
+                "filename": {
+                    "type": "string",
+                    "example": "image.jpg"
+                },
+                "media_type": {
+                    "type": "string",
+                    "example": "image"
                 }
             }
         },
